--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -45,7 +45,7 @@ jobs:
       matrix:
         include:
         - language: c-cpp
-          build-mode: none
+          build-mode: manual
         - language: csharp
           build-mode: none
         - language: java-kotlin
@@ -89,16 +89,21 @@ jobs:
     # Command-line programs to run using the OS shell.
     # See: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     - if: matrix.build-mode == 'manual'
-      name: Manual build message
+      name: Manual build
       shell: bash
       run: |
-        echo ''
-        echo 'If you are using a "manual" build mode for one or more of the' \
-          'languages you are analyzing, replace this with the commands to build' \
-          'your code, for example:'
-        echo '  make bootstrap'
-        echo '  make release'
-        exit 1
+        # shellcheck disable=SC2001,2086
+        for cfile in $(find . -name '*.c' -type f -print0 | xargs -0 file | grep "c program text" | cut -d: -f1); do \
+          cobjfile="$(echo "${cfile}" | sed "s/\.c/.o/g")"; \
+          cfiledir="$(dirname "${cfile}")"; \
+          if test ! -e "${cobjfile}"; then \
+            echo "gcc -c -w -Wno-error -Wfatal-errors -I\"${cfiledir}\" -iquote \"${cfiledir}\" ${cfile}"; \
+            gcc -c -w -Wno-error -Wfatal-errors -I"${cfiledir}" -iquote "${cfiledir}" ${cfile} || stat -t "${cfile}" || echo "cfile is ${cfile}"; \
+          else \
+            echo "object file ${cobjfile} already exists for ${cfile}."; \
+            cp -v "${cobjfile}" "${cfiledir}" || cp -v "${cobjfile}" . || cp -v "${cobjfile}" .. || (if test -d /tmp && test -w /tmp; then cp -v "${cobjfile}" /tmp; fi) || stat -t "${cobjfile}"; \
+          fi; \
+        done
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
